--- a/turbo.json
+++ b/turbo.json
@@ -9,12 +9,18 @@
 		"kit.svelte.dev#build": {
 			"dependsOn": ["^build", "$VERCEL", "$ENABLE_VC_BUILD"],
 			"inputs": ["src/**", "../../packages/kit/docs/**", "../../documentation/**"],
-			"outputs": [".vercel_build_output/**"]
+			"outputs": [".vercel_build_output/**", ".vercel/output/**"]
 		},
 		"build": {
 			"dependsOn": ["^build", "$VERCEL", "$ENABLE_VC_BUILD"],
 			"inputs": ["src/**", "scripts/**", "shared/**", "templates/**"],
-			"outputs": ["files/**", "dist/**", ".svelte-kit/**", ".vercel_build_output/**"]
+			"outputs": [
+				"files/**",
+				"dist/**",
+				".svelte-kit/**",
+				".vercel_build_output/**",
+				".vercel/output/**"
+			]
 		},
 		"check": {
 			"dependsOn": ["build"],
