robustify error handling (#5108)
* robustify error handling

* bump vite-plugin-svelte

* remove hot.optimistic override

* try to fix typechecking errors

--- a/turbo.json
+++ b/turbo.json
@@ -27,7 +27,9 @@
 			"outputs": []
 		},
 		"format": {},
-		"sync": {},
+		"sync": {
+			"outputs": [".svelte-kit/types/**", ".custom-out-dir/types/**"]
+		},
 		"test": {
 			"dependsOn": ["^build", "$CI", "$TURBO_CACHE_KEY"],
 			"outputs": []
